--- a/app/styles/settings.css
+++ b/app/styles/settings.css
@@ -1,37 +1,57 @@
+#infoRedirect { 
+  font-size: 12px;
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#welcome { 
+  font-size: 20px;
+}
+
 body {   
   text-align: center;
-}
-   
-.heading {
-  border-bottom: 1px solid #eee;
-  font-weight: bold;
-  margin-bottom:10px;
-  font-size: 15pt;
+  background-color: #eee;
 }
  
-#inputForm {
-  margin-bottom: 20px;
-}
-
-#confirmationVal { 
-  color: #006400;
-  word-wrap: break-word;
+h1 { 
+    font-size: 26px;
 } 
 
-.header { 
-	background: lightgray;
+#savedRedirects {
+  margin-top: 10px;
 }
 
-td {
-  padding-left: 10px;
-  padding-right: 10px; 
+input { 
+  padding-left: 5px;
+  margin-bottom: 10px;
+}
+
+img { 
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#content { 
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 20px 40px 30px;
+  margin: 40px auto 0;
+  width: 900px;
+}
+
+.table>tbody>tr>td { 
+  vertical-align: middle; 
+}
+
+.table {
+  width: 90%;
+  table-layout:fixed;
+  word-break: break-all;
 }
  
-table, th, td {
-    border: 1px solid black;
-     border-collapse: collapse;
-}
 
-table {
- 	margin-bottom: 30px;
+.confirmationVal { 
+  color: #006400;
+  word-wrap: break-word;
 }
